# lerobot_haptic_feedback

./: .gitignore  README.md  pyproject.toml
arduino/: feedback_motor.ino
examples/: calibrate_leader.sh  record_with_feedback.sh
src/feedback_leader/lerobot_teleoperator_feedback_leader/: __init__.py  feedback_leader.py  feedback_motor.py
src/lerobot_teleoperator_feedback_leader/: config_feedback_leader.py  feedback_leader.py  feedback_motor.py
src/record_with_feedback/: __main__.py
src/so_sensor_arm/examples/: record_dataset_sensor_test.sh  test_robot_connection.py
