
[project]
name = "lerobot_haptic_feedback"
version = "0.1.0"
description = "Leader with feedback motor and follower with force sensor on gripper."
authors = [{name = "Aaron Epperly", email = "20829509+ayerone@users.noreply.github.com"}]
readme = "README.md"

dependencies = [
    "lerobot>=0.4.3",
    "lerobot[feetech]"
]

requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
